# code-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/agent_auto/: __init__.py  classify.py  cli.py  config.py  doctor.py  models.py  pipeline.py
src/agent_auto/agents/: __init__.py  coder.py  orchestrator.py  planner.py  reviewer.py  tester.py
src/agent_auto/context/: scout.py
src/agent_auto/contribute/: __init__.py  ci_loop.py  claim.py  eligibility.py  forking.py  issues.py  pr_body.py  progress.py  rank.py  runner.py  runtime_profile.py  state.py  ux_verify.py
src/agent_auto/deliver/: __init__.py  ship.py
src/agent_auto/intake/: env_gate.py
src/agent_auto/llm/: client.py  gemini.py  gemini_adapter.py  groq_client.py
src/agent_auto/loop/: __init__.py  engine.py
src/agent_auto/paths/: __init__.py  docs.py
src/agent_auto/planner/: planner.py
src/agent_auto/rag/: __init__.py  chunker.py  embedder.py  indexer.py  retriever.py  store.py
src/agent_auto/report/: writer.py
src/agent_auto/tools/: browser.py  fs.py  git_ops.py  registry.py  sandbox.py  search.py  shell.py  tests_runner.py
src/agent_auto/verify/: __init__.py  evaluator.py
tests/: test_chunker.py  test_classify.py  test_eligibility.py  test_env_gate.py  test_evaluator.py  test_pr_body.py  test_progress.py  test_rank.py  test_sandbox.py  test_scout.py  test_shell.py  test_ship.py
